<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/add_fav_detail_menu"
            android:icon="@drawable/ic_fav_add"
            android:title="@string/favorites"
            android:iconifiedByDefault="false"
            app:showAsAction="ifRoom"
    />

</menu>