<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".mvp.main.teams.TeamsFragment">

    <Spinner
            android:id="@+id/teams_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_teams"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/teams_spinner"
    />

    <ProgressBar
            android:id="@+id/pg_teams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
    />

</RelativeLayout>