<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                tools:context=".mvp.main.MainActivity">

    <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottom_layout"
    />

        <LinearLayout
                android:id="@+id/bottom_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
        >
            <View
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:background="@drawable/shadow"
            />
            <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/bottom_navigation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:itemBackground="@android:color/white"
                    app:itemIconTint="@drawable/nav_item_color_state"
                    app:itemTextColor="@drawable/nav_item_color_state"
                    app:menu="@menu/match_menu"
            />

        </LinearLayout>
</RelativeLayout>